Add legal policy pages for Razorpay

--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -265,6 +265,13 @@
 
     <!-- footer -->
     <footer class="text-center py-10 text-gray-600">
+        <div class="mb-4 space-x-4 text-sm">
+            <a href="terms.html" class="hover:text-purple-400">Terms</a>
+            <a href="privacy.html" class="hover:text-purple-400">Privacy</a>
+            <a href="refund.html" class="hover:text-purple-400">Refunds</a>
+            <a href="shipping.html" class="hover:text-purple-400">Delivery</a>
+            <a href="contact.html" class="hover:text-purple-400">Contact</a>
+        </div>
         &copy; 2025 Interview Genie. All rights reserved.
     </footer>
 
