--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -117,6 +117,14 @@
                     Premium</button>
                 <div id="adminMsg" class="text-center text-sm min-h-[1.5em]"></div>
             </form>
+
+            <div class="mt-6 pt-6 border-t border-gray-700">
+                <h4 class="font-bold text-gray-300 mb-3 text-xs uppercase">Pending Requests</h4>
+                <div id="requestsList"
+                    class="space-y-2 max-h-48 overflow-y-auto text-sm text-gray-400 bg-gray-900 p-2 rounded">
+                    <!-- Dynamic List -->
+                </div>
+            </div>
         </div>
     </div>
 
@@ -240,26 +248,24 @@
     <section id="pricing" class="py-20 px-4 text-center">
         <h2 class="text-4xl font-bold mb-12">Simple Pricing</h2>
         <div class="glass max-w-md mx-auto p-8 rounded-2xl border-2 border-purple-500 relative overflow-hidden">
-            <div class="absolute top-0 right-0 bg-purple-600 text-xs font-bold px-3 py-1 rounded-bl-lg">POPULAR
-            </div>
-            <h3 class="text-2xl font-bold mb-2">Premium Pass</h3>
-            <div class="text-5xl font-extrabold mb-6">₹10 <span class="text-lg text-gray-400 font-normal">/
-                    lifetime</span></div>
+            <div class="absolute top-0 right-0 bg-purple-600 text-xs font-bold px-3 py-1 rounded-bl-lg">EXCLUSIVE</div>
+            <h3 class="text-2xl font-bold mb-2">Lifetime Access</h3>
+            <div class="text-5xl font-extrabold mb-6">₹4999</div>
 
             <ul class="text-left space-y-3 mb-8 text-gray-300">
-                <li class="flex items-center gap-2">✅ Unlimited AI Queries</li>
+                <li class="flex items-center gap-2">✅ One-time Payment</li>
                 <li class="flex items-center gap-2">✅ Full Invisible Mode</li>
-                <li class="flex items-center gap-2">✅ Priority Support</li>
-                <li class="flex items-center gap-2">✅ Instant Activation</li>
+                <li class="flex items-center gap-2">✅ Instant Code Solutions</li>
+                <li class="flex items-center gap-2">✅ Voice & Screen Capture</li>
             </ul>
 
-            <!-- Dynamic Pricing Button -->
+            <!-- Request Button -->
             <button id="pricingBtn"
                 class="block w-full py-4 bg-purple-600 hover:bg-purple-700 rounded-lg font-bold text-lg transition">
-                Login to Pay
+                Request Premium Access
             </button>
 
-            <p class="text-xs text-gray-500 mt-4">Secure payment via Razorpay. Use same email as in App.</p>
+            <p class="text-xs text-gray-500 mt-4">Manual activation. Request access -> Check Email for Payment Link.</p>
         </div>
     </section>
 
@@ -296,6 +302,7 @@
         const targetEmailInput = document.getElementById('targetEmail');
         const activateBtn = document.getElementById('activateBtn');
         const adminMsg = document.getElementById('adminMsg');
+        const requestsList = document.getElementById('requestsList');
 
         // Check Login
         const token = localStorage.getItem('auth-token');
@@ -324,8 +331,8 @@
             checkStatus(); // Fetch latest status
 
             // Configure Pricing Button
-            pricingBtn.textContent = 'Upgrade Now';
-            pricingBtn.onclick = handlePayment;
+            pricingBtn.textContent = 'Request Access';
+            pricingBtn.onclick = handleRequest;
 
         } else {
             // SHOW LOGGED OUT STATE
@@ -333,7 +340,43 @@
         }
 
         // Admin Logic
-        adminBtn.addEventListener('click', () => adminModal.classList.remove('hidden'));
+        adminBtn.addEventListener('click', () => {
+            adminModal.classList.remove('hidden');
+            fetchRequests();
+        });
+
+        async function fetchRequests() {
+            requestsList.innerHTML = '<p>Loading...</p>';
+            try {
+                const res = await fetch('/api/auth/admin/requests', {
+                    headers: { 'x-auth-token': token }
+                });
+                const data = await res.json();
+
+                if (res.ok) {
+                    if (data.length === 0) {
+                        requestsList.innerHTML = '<p class="text-gray-500">No pending requests</p>';
+                    } else {
+                        requestsList.innerHTML = data.map(req => `
+                            <div class="flex justify-between items-center p-2 bg-gray-800 rounded mb-1">
+                                <div>
+                                    <div class="text-white">${req.email}</div>
+                                    <div class="text-xs text-gray-500">${new Date(req.createdAt).toLocaleDateString()}</div>
+                                </div>
+                                <button onclick="copyToClipboard('${req.email}')" class="text-xs bg-gray-700 hover:bg-gray-600 px-2 py-1 rounded">Copy</button>
+                            </div>
+                        `).join('');
+                    }
+                }
+            } catch (e) {
+                requestsList.innerHTML = '<p class="text-red-400">Error fetching requests</p>';
+            }
+        }
+
+        window.copyToClipboard = (text) => {
+            navigator.clipboard.writeText(text);
+            alert('Copied: ' + text);
+        };
         closeAdminBtn.addEventListener('click', () => adminModal.classList.add('hidden'));
 
         adminForm.addEventListener('submit', async (e) => {
@@ -405,60 +448,32 @@
         });
 
         // Payment Logic
-        async function handlePayment() {
+        // Request Logic
+        async function handleRequest() {
             const btn = pricingBtn;
-            btn.textContent = 'Processing...';
+            btn.textContent = 'Sending Request...';
             btn.disabled = true;
 
             try {
-                // 1. Create Order
-                const res = await fetch('/api/payment/create-order', {
+                const res = await fetch('/api/payment/request-access', {
                     method: 'POST',
                     headers: { 'x-auth-token': token }
                 });
-                const order = await res.json();
-                if (!res.ok) throw new Error('Order Failed');
+                const data = await res.json();
 
-                // 2. Open Checkout
-                var options = {
-                    "key": "rzp_test_RoI79b29xp6b0N",
-                    "amount": order.amount,
-                    "currency": "INR",
-                    "name": "Interview Genie",
-                    "description": "Premium Upgrade",
-                    "image": "assets/ICON.jpeg",
-                    "order_id": order.id,
-                    "handler": async function (response) {
-                        btn.textContent = 'Verifying...';
-                        const verifyRes = await fetch('/api/payment/verify-payment', {
-                            method: 'POST',
-                            headers: { 'Content-Type': 'application/json', 'x-auth-token': token },
-                            body: JSON.stringify({
-                                razorpay_order_id: response.razorpay_order_id,
-                                razorpay_payment_id: response.razorpay_payment_id,
-                                razorpay_signature: response.razorpay_signature
-                            })
-                        });
-
-                        if (verifyRes.ok) {
-                            alert('✅ Payment Successful! You are now Premium.');
-                            window.location.reload();
-                        } else {
-                            alert('Verification failed');
-                            btn.textContent = 'Upgrade Now';
-                            btn.disabled = false;
-                        }
-                    },
-                    "theme": { "color": "#7c3aed" }
-                };
-                var rzp1 = new Razorpay(options);
-                rzp1.open();
-
-            } catch (error) {
-                console.error(error);
-                btn.textContent = 'Upgrade Now';
-                btn.disabled = false;
+                if (res.ok) {
+                    alert('✅ ' + data.msg);
+                    btn.textContent = 'Request Sent Check Email';
+                } else {
+                    alert('❌ ' + data.msg);
+                    btn.textContent = 'Request Access';
+                    btn.disabled = false;
+                }
+            } catch (err) {
+                console.error(err);
                 alert('Server Error. Try again.');
+                btn.textContent = 'Request Access';
+                btn.disabled = false;
             }
         }
     </script>
