--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -7,6 +7,7 @@
     <title>Interview Genie - AI Copilot</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+    <link rel="icon" href="assets/ICON.jpeg" type="image/jpeg">
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <style>
         html {
