--- a/web-server/public/login.html
+++ b/web-server/public/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Interview Genie</title>
+    <link rel="icon" href="assets/ICON.jpeg" type="image/jpeg">
     <!-- Google Identity Services -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <style>
